--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Hey everyone</h1>
     Hello there, awesome person! 
+    <img src="https://avatars.githubusercontent.com/u/86281247?v=4">
   </body>
 </html>
