--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <h1>Hey everyone</h1>
     Hello there, awesome person! 
     <img src="https://avatars.githubusercontent.com/u/86281247?v=4">
+    <ul>
+
+    <li>geeksforgeeks</li>
+
+    <li>w3schools</li>
+
+    <li>pinterest</li>
+
+</ul>
   </body>
 </html>
