--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <img src="https://avatars.githubusercontent.com/u/86281247?v=4">
     <ul>
 
-    <li>geeksforgeeks</li>
+    <li>github</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
 
     <li>w3schools</li>
 
